--- a/kakaomap/map.html
+++ b/kakaomap/map.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>카카오맵</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b7f976968649815f6d8a6cfe2a824ac9&libraries=services,clusterer,drawing"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="/kakaomap/images/favicon.png">
     <link rel="stylesheet" href="/kakaomap/css/kakaomap.css">
     <link rel="stylesheet" href="/kakaomap/css/map.css">
@@ -14,7 +15,21 @@
     <div id="container">
         <aside>
             <header>
-
+                <div class="title">
+                    
+                    <h1 class="title-text">
+                        <i class="fa-solid fa-bars"></i>
+                        kakao<span class="map-text">map</span>
+                    </h1>
+                    <div class="check-location">
+                        <input type="checkbox" id="my-location">
+                        <label for="my-location" class="my-location-label">현 지도 내 장소검색</label>
+                    </div>
+                </div>
+                <div class="search">
+                    <input type="text" class="search-input" placeholder="장소, 주소, 버스 검색">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
             </header>
             <ul class="menu">
                 <li><a href="#" class="mainmenutab tab-selected">검색</a></li>
@@ -23,6 +38,60 @@
                 <li><a href="#" class="mainmenutab">지하철</a></li>
                 <li><a href="#" class="mainmenutab">MY</a></li>
             </ul>
+            <div class="report-error">
+                <div class="ta_wrap">
+                    <h3 class="title-around">금정구 부곡동</h3>
+                    <p class="err">오류신고</p>
+                </div>
+                <p class="inforocation"></p>
+            </div>
+            <div class="info">
+                <h3 class="title-around">주변탐색</h3>
+                <ul class="list-around">
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="button-around">
+                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
+                            <span class="button-title">음식점</span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </aside>
         <div id="map"></div>
     </div>
