--- a/kakaomap/map.html
+++ b/kakaomap/map.html
@@ -40,10 +40,12 @@
             </ul>
             <div class="report-error">
                 <div class="ta_wrap">
-                    <h3 class="title-around">금정구 부곡동</h3>
+                    <h3 class="title-around1">금정구 부곡동</h3>
                     <p class="err">오류신고</p>
                 </div>
-                <p class="inforocation"></p>
+                <p class="info-location-weather">
+                    <span class="txt_air">비온후 갬</span><span class="temper">7˚</span><span class="txt_change">어제보다 1℃ 높아요</span><span class="txt_bar"></span><span class="txt_dust">미세<span data-id="dust_state" class="txt_state density1">좋음</span></span><span class="txt_dust">초미세<span data-id="micro_dust_state" class="txt_state density1">좋음</span></span>
+                </p>
             </div>
             <div class="info">
                 <h3 class="title-around">주변탐색</h3>
@@ -56,42 +58,43 @@
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-mug-hot"></i></div>
+                            <span class="button-title">카페</span>
                         </button>
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-bus-simple"></i></div>
+                            <span class="button-title">버스</span>
                         </button>
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-train-subway"></i></div>
+                            <span class="button-title">지하철</span>
                         </button>
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-bed"></i></div>
+                            <span class="button-title">숙박</span>
                         </button>
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-won-sign"></i></div>
+                            <span class="button-title">은행</span>
                         </button>
                     </li>
                     <li>
                         <button class="button-around">
-                            <div class="button-icon"><i class="fa-solid fa-utensils"></i></div>
-                            <span class="button-title">음식점</span>
+                            <div class="button-icon"><i class="fa-solid fa-house-user"></i></div>
+                            <span class="button-title">편의점</span>
                         </button>
                     </li>
                 </ul>
             </div>
+            <button type="button" class="toggle-button">▶</button>
         </aside>
         <div id="map"></div>
     </div>
